# ResearchMind

./: main.py  pyproject.toml
app/agent/: research_agent.py
app/config/: model.py  settings.py
app/embeddings/: embedder.py
app/ingestion/: ingest.py  loader.py
app/knowledge/: ai_notes.txt
app/tools/: knowledge_search.py  retrieval_tool.py
app/vectorstore/: chroma_store.py
app/vectorstore/chroma_db/: chroma.sqlite3
