[project]
name = "ai-research-assistant-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Zainab Manzoor",email = "zainabmanzoorzoor@gmail.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "smolagents (>=1.26.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "transformers (>=5.13.1,<6.0.0)",
    "ollama (>=0.6.2,<0.7.0)",
    "groq (>=1.5.0,<2.0.0)",
    "litellm (<1.80)",
    "chromadb (>=1.5.9,<2.0.0)",
    "sentence-transformers (>=5.6.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
